# gi-demo

./: .clang-format  CMakeLists.txt  README.md
data/shaders/: debug_draw.fs.glsl  debug_draw.vs.glsl  depth.fs.glsl  lightmap_pack.vs.glsl  lit.fs.glsl
gi-demo/: .clang_complete  AppDelegate.swift  AppOpenGLView.swift  CMakeLists.txt  ViewController.swift  app.cpp  app.h  debug_draw.cpp  debug_draw.h
gi-demo.xcodeproj/: project.pbxproj
gi-demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gi-demo.xcodeproj/xcuserdata/bscott.xcuserdatad/xcschemes/: gi-demo.xcscheme  xcschememanagement.plist
gi-demo/Base.lproj/: Main.storyboard
gi-demo/data/shaders/: debug_texture.fs.glsl  debug_texture.vs.glsl  lightmap_only.fs.glsl  lightmap_only.vs.glsl  lightmap_pack.fs.glsl  lit.vs.glsl
s/: build  setup
src/: AppDelegate.swift  Info.plist  ViewController.swift  app.cpp  app.h  gi-demo-Bridging-Header.h
src/Base.lproj/: Main.storyboard
